[css-grid] mimax(auto, <flex>) should be serialized as <flex>

Add a simple if to serialize properly this case.

Add new test case to verify it. We can only check it
using grid-auto-columns|rows, because grid-template-columns|rows
is serialized to the used breadth.

BUG=660675

Review-Url: https://codereview.chromium.org/2473493003
Cr-Commit-Position: refs/heads/master@{#429252}

Former-commit-id: 7e941579065975fa2644e2e0d14d96b4e52312bd