third_party/WebKit/Source/core/style/GridLength.h
@@ -76,6 +76,8 @@ class GridLength {
             m_length.isMaxContent());
   }
 
+  bool isAuto() const { return m_type == LengthType && m_length.isAuto(); }
+
  private:
   // Ideally we would put the 2 following fields in a union, but Length has a
   // constructor, a destructor and a copy assignment which isn't allowed.
